Add additional tests

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
 				</executions>
 				<configuration>
 					<apiToken>${env.SNYK_TOKEN}</apiToken>
+					<skip>true</skip>
 					<args>
 						<arg>--all-projects</arg>
 					</args>
